# evo-world

./: README.md  pyproject.toml
src/evoworld/: main.py
src/evoworld/config/: settings.py
src/evoworld/domain/: creature.py  food.py  genome.py  world.py
src/evoworld/rendering/: renderer.py
src/evoworld/simulation/: engine.py
